fixed buttons on smaller screen

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ button:hover {
 
 #play {
     height: 70px;
-    width: 100px;
+    width: 118px;
 }
   }
 
